--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -773,7 +773,7 @@ html {
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Open+Sans', sans-serif;
   color: #515151;
   background-color: #fbfbfb;
   margin: 0;
@@ -969,7 +969,7 @@ table tfoot td {
 }
 
 .about .author-name {
-  font-family: 'PT Serif', serif;
+  font-family: 'Open Sans Serif', serif;
   margin: 0 0 10px;
   position: relative;
   padding-bottom: 15px;
@@ -1162,7 +1162,7 @@ footer .copyright {
 }
 
 .post .post-content .post-title a {
-  font-family: 'PT Serif', serif;
+  font-family: 'Open Sans Serif', serif;
   text-decoration: none;
   color: #263959;
 }
